--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
   "homepage": "https://github.com/d2-projects/vue-filename-injector#readme",
   "dependencies": {
     "loader-utils": "^1.2.3"
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "3.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
